@@ -183,6 +183,12 @@ public class UpdateLog implements PluginInfoInitialized {
   }
 
   public void init(UpdateHandler uhandler, SolrCore core) {
+    // ulogDir from CoreDescriptor overrides
+    String ulogDir = core.getCoreDescriptor().getUlogDir();
+    if (ulogDir != null) {
+      dataDir = ulogDir;
+    }
+    
     if (dataDir == null || dataDir.length()==0) {
       dataDir = core.getDataDir();
     }
