@@ -36,6 +36,8 @@ public interface CoreAdminParams
 
   /** If you rename something, what is the new name **/
   public final static String DATA_DIR = "dataDir";
+  
+  public final static String ULOG_DIR = "ulogDir";
 
   /** Name of the other core in actions involving 2 cores **/
   public final static String OTHER = "other";
