@@ -47,6 +47,7 @@
         <filter class="solr.RemoveDuplicatesTokenFilterFactory"/>
       </analyzer>
     </fieldType>
+    <fieldType name="long" class="solr.TrieLongField" precisionStep="0" positionIncrementGap="0"/>
   </types>
 
   <fields>
@@ -55,6 +56,7 @@
     <field name="type" type="string" indexed="true" stored="true" multiValued="false"/>
     <field name="name" type="string" indexed="true" stored="true" multiValued="false"/>
     <field name="${ctlField:}" type="text-${l10n:EN}" indexed="true" stored="true" multiValued="true"/>
+    <field name="_version_" type="long"     indexed="true"  stored="true"/>
   </fields>
 
   <!-- field to use to determine and enforce document uniqueness. -->
